--- a/css/styles.css
+++ b/css/styles.css
@@ -37,3 +37,17 @@ h1 {
 
   line-height: 1;
 }
+
+.btn {
+  border: 2px var(--color--text) solid;
+  padding: 0.2em 1em;
+  margin-top: 1em;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+  text-decoration: none;
+}
